--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -7,7 +7,9 @@ var contDnsRecon = 0;
 var contDroope = 0;
 var contInfoga = 0;
 var contInfogaEmail = 0;
-var contWapiti = 0;}
+var contWapiti = 0;
+var contSqlmap = 0;
+var contWifite = 0;}
 
 <h2>Sei sicuro di voler cancellare il progetto @Html.DisplayFor(model => model.Nome) ? </h2>
 <hr />
@@ -56,6 +58,8 @@ var contWapiti = 0;}
                             if(item.Modulo is webmva.Models.ModuloINFOGA){contInfoga++;}
                             if(item.Modulo is webmva.Models.ModuloINFOGAEMAIL){contInfogaEmail++;}
                             if(item.Modulo is webmva.Models.ModuloWAPITI){contWapiti++;}
+                             if(item.Modulo is webmva.Models.ModuloSQLMAP){contSqlmap++;}
+                             if(item.Modulo is webmva.Models.ModuloWIFITE){contWifite++;}
                         }
                         @if(contNMAP!=0){
                                 
@@ -281,6 +285,62 @@ var contWapiti = 0;}
                                 </table>
                                 </dd>    
                         }  
+                        @if(contSqlmap!=0){
+                                
+                             <dd><strong>Sqlmap</strong></dd>
+                            <dd>
+                            <table class="table">
+                                <tr>
+                                    <th> </th>
+                                    <th>Modulo</th>
+                                    <th>Comando</th>
+                                </tr>
+                        @foreach (var item in Model.ModuliProgetto) {
+                            
+                                @if(item.Modulo is webmva.Models.ModuloSQLMAP){
+                                <tr>
+                                <td></td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Nome)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Comando)
+                                    </td>
+                                </tr>
+                               
+                                }
+                                }
+                                </table>
+                                </dd>    
+                        } 
+                         @if(contWifite!=0){
+                                
+                             <dd><strong>Wifite</strong></dd>
+                            <dd>
+                            <table class="table">
+                                <tr>
+                                    <th> </th>
+                                    <th>Modulo</th>
+                                    <th>Comando</th>
+                                </tr>
+                        @foreach (var item in Model.ModuliProgetto) {
+                            
+                                @if(item.Modulo is webmva.Models.ModuloWIFITE){
+                                <tr>
+                                <td></td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Nome)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Comando)
+                                    </td>
+                                </tr>
+                               
+                                }
+                                }
+                                </table>
+                                </dd>    
+                        }   
                                 
             <div class="container ">
                     <div class="form-group col-sm-6 ">
